Add discussion of rate data.

--- a/create_reaction_xml.ipynb
+++ b/create_reaction_xml.ipynb
@@ -121,7 +121,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now add the data.  The data are included as a dictionary with entries being the *type* and then the relevant data fields.  For a description, see ....  For this example, we use a rate table.  For each temperature (*t9*), there is a rate value (*rate*) and a stellar enhancement factor (*sef*)."
+    "Now add the data.  The data are included as a dictionary with entries being the *type* and then the relevant data fields.  The three standard formats are 1) a single rate, 2) a rate table, and 3) the non-smoker format.  It is also possible to add user-defined rate data.  Examples of each are as follows:\n",
+    "\n",
+    "- A single rate:  Supply the rate as a single float.\n",
+    "       \n",
+    "        reactions[\"new\"].data = {'type': 'single_rate', 'rate': 1.5}\n",
+    "        \n",
+    "- A rate table:  For each temperature (*t9*), provide a rate (*rate*) and stellar enhancement factor (*sef*).  These are supplied as lists.\n",
+    "\n",
+    "        t9 = [0.01, 0.1, 1, 2, 3, 5, 10]\n",
+    "        rate = [1.e3, 2.e3, 3.e3, 5.e3, 7.e3, 1.e4, 1.e5]\n",
+    "        sef = [1, 1, 1, 1, 1, 1, 1]\n",
+    "        reactions['new'].data = {'type': 'rate_table', 'rate': rate, 't9': t9, 'sef': sef}\n",
+    "        \n",
+    "- A non-smoker fit:  Provide the fit parameters.\n",
+    "\n",
+    "        reactions['new'].data = {'type': 'non_smoker_fit', 'fits': [{'spint': 0.5, 'spinf': 1.0,\n",
+    "        'TlowHf': -1.0, 'Tlowfit': 0.01, 'Thighfit': 10.0, 'acc': 0.035, 'a1': 204.211, 'a2': -10.533,\n",
+    "        'a3': 414.2, 'a4': -658.043, 'a5': 37.4352, 'a6': -2.17474, 'a7': 326.601, 'a8': 227.497}]}\n",
+    "        \n",
+    "- A user-defined rate:  Provide the user-defined properties.\n",
+    "\n",
+    "        reactions['new'].data = {'type': 'user_rate', 'key': 'kunz fit', ('a', '0'): ' 1.21e8',\n",
+    "        ('a', '1'): ' 6.06e-2', ('a', '10'): ' 2.e6', ('a', '11'): ' 38.534', ('a', '2'): ' 32.12',\n",
+    "        ('a', '3'): ' 1.7', ('a', '4'): ' 7.4e8', ('a', '5'): ' 0.47', ('a', '6'): ' 32.12',\n",
+    "        ('a', '7'): ' 0.', ('a', '8'): ' 0.', ('a', '9'): ' 1.53e4'}\n",
+    "\n",
+    "\n",
+    "For this example, we use a rate table.  "
    ]
   },
   {
