--- a/create_reaction_xml.ipynb
+++ b/create_reaction_xml.ipynb
@@ -82,7 +82,7 @@
     "        ('a', '3'): ' 1.7', ('a', '4'): ' 7.4e8', ('a', '5'): ' 0.47', ('a', '6'): ' 32.12',\n",
     "        ('a', '7'): ' 0.', ('a', '8'): ' 0.', ('a', '9'): ' 1.53e4'}\n",
     "\n",
-    "This example adds a reaction of each type.\n"
+    "This example adds a reaction of each type.  It is possible to add as many reactions of each type as desired.\n"
    ]
   },
   {
