--- a/create_reaction_xml.ipynb
+++ b/create_reaction_xml.ipynb
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_file = \"my_reaction.xml\""
+    "my_file = \"my_reactions.xml\""
    ]
   },
   {
