--- a/create_reaction_xml.ipynb
+++ b/create_reaction_xml.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The new XML file exists in the local directory.  If you are running this notebook on Google Colab, you can download the file by clicking on the folder icon on the left to show the current files in your working directory.  To download the file, right click (or control click) on the file name and then choose download."
+    "The new XML file exists in the working directory.  If you are running this notebook on Google Colab, you can download the file by clicking on the folder icon on the left to show the current files in your working directory.  To download the file, click on the file name and then choose download."
    ]
   },
   {
