--- a/create_reaction_xml.ipynb
+++ b/create_reaction_xml.ipynb
@@ -11,7 +11,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/10151>\r\n",
+      "distutils: /Users/bradleymeyer/Library/Python/3.7/include/python3.7m/UNKNOWN\r\n",
+      "sysconfig: /Users/bradleymeyer/Library/Python/3.7/include/UNKNOWN\u001b[0m\r\n",
+      "\u001b[33mWARNING: Additional context:\r\n",
+      "user = True\r\n",
+      "home = None\r\n",
+      "root = None\r\n",
+      "prefix = None\u001b[0m\r\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install --quiet wnutils\n",
@@ -54,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add reactions.  This notebook will create four reactions.  The necessary data are 1) a list of strings giving the reactants, 2) a list of strings giving the products, 3) a source (a string giving the provenance of the data), and 4) the rate data.\n",
+    "Add reactions.  This notebook will create XML data for four reactions.  The necessary data are 1) a list of strings giving the reactants, 2) a list of strings giving the products, 3) a source (a string giving the provenance of the data), and 4) the rate data.\n",
     "\n",
     "The rate data are included as a dictionary with entries being the *type* and then the relevant data fields.  The three standard formats are 1) a single rate, 2) a rate table, and 3) the non-smoker format.  It is also possible to add user-defined rate data.  Examples of each are as follows:\n",
     "\n",
@@ -113,6 +128,7 @@
     "                                                              'a1': 204.211, 'a2': -10.533, 'a3': 414.2, \n",
     "                                                              'a4': -658.043, 'a5': 37.4352, 'a6': -2.17474,\n",
     "                                                              'a7': 326.601, 'a8': 227.497}]}\n",
+    "\n",
     "reactions['new4'] = wx.Reaction()\n",
     "reactions['new4'].reactants = ['c12', 'he4']\n",
     "reactions['new4'].products = ['o16', 'gamma']\n",
@@ -179,7 +195,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now print out the XML file contents."
+    "The new XML file exists in the working directory.  If you are running this notebook on Google Colab, you can download the file by clicking on the folder icon on the left to show the current files in your working directory.  To download the file, click on the file name and then choose download.\n",
+    "\n",
+    "Execute the following cell to print out the XML file contents."
    ]
   },
   {
@@ -312,9 +330,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "The new XML file exists in the working directory.  If you are running this notebook on Google Colab, you can download the file by clicking on the folder icon on the left to show the current files in your working directory.  To download the file, click on the file name and then choose download."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
